# simfony-webide

./: .gitignore  CNAME  Cargo.toml  README.md  deploy.nix  fix-links.sh  flake.nix  index.html  justfile  shell.nix  simplicity-webide-114d1a94d6d5c5d6.js  simplicity-webide-114d1a94d6d5c5d6_bg.wasm  simplicity-webide-1a53c2c2e39c3f58.js  simplicity-webide-1a53c2c2e39c3f58_bg.wasm  simplicity-webide-1c742c614599769c.js  simplicity-webide-1c742c614599769c_bg.wasm  simplicity-webide-1ebe7af488d817ad.js  simplicity-webide-1ebe7af488d817ad_bg.wasm  simplicity-webide-2309f38442ce5229.js  simplicity-webide-2311fc82dc3776a9.js  simplicity-webide-2311fc82dc3776a9_bg.wasm  simplicity-webide-258569d1e6d60389.js  simplicity-webide-26470e0baa23d0ab.js  simplicity-webide-290a48a4d064cec6.js  simplicity-webide-296c62462ea41087.js  simplicity-webide-296c62462ea41087_bg.wasm  simplicity-webide-2b9429a5caeb17ea.js  simplicity-webide-2b9429a5caeb17ea_bg.wasm  simplicity-webide-2f5dfbc6560901b8.js  simplicity-webide-3046cc489bdf23ea.js  simplicity-webide-3046cc489bdf23ea_bg.wasm  simplicity-webide-308b7b7850dc5a25.js  simplicity-webide-308b7b7850dc5a25_bg.wasm  simplicity-webide-33b1ac71d23bf08c.js  simplicity-webide-3681f82ff4d0d688.js  simplicity-webide-373b27abf84e35c7.js  simplicity-webide-3fcc5acddf57f9d.js  simplicity-webide-3fce65815ba8b36d.js  simplicity-webide-3fce65815ba8b36d_bg.wasm  simplicity-webide-400e50b38a36f9b7.js  (+150 more)
.github/workflows/: deploy.yml  test.yml
doc/: README.md
snippets/simplicity-webide-6f80102749cba927/src/assets/js/: badger.js  (+1 more)
src/: env.rs  examples.rs  exec.rs  function.rs  instruction.rs  jet.rs  main.rs  transaction.rs  util.rs  value.rs
src/assets/animations/: badger.riv
src/assets/js/: badger.js  button_effects.js  confetti.js  copy_button.js  d3_load.js  merkle_graph_d3.js  rive_runtime_2.18.0.js
src/assets/style/: button_effects.scss  confetti.scss  helpers.scss  style.scss
src/assets/style/components/: analysis.scss  footer.scss  merkle.scss  merkle_graph.scss  navbar.scss  program_input.scss  string_box.scss  tab_content.scss  tooltip.scss
src/components/: analysis.rs  app.rs  apply_changes.rs  bit_machine.rs  copy_to_clipboard.rs  dropdown.rs  error.rs  examples.rs  footer.rs  merkle.rs  merkle_graph.rs  mod.rs  navbar.rs  parser.rs  program_analysis.rs  state.rs  string_box.rs  table_form.rs  tabs.rs  toolbar.rs
src/components/program_window/: address_button.rs  examples_dropdown.rs  examples_tab.rs  help_button.rs  mod.rs  program_tab.rs  run_button.rs  share_button.rs  tools_dropdown.rs  transaction_button.rs  transaction_tab.rs  witness_tab.rs
src/components/run_window/: execution_tab.rs  hash_store_tab.rs  key_store_tab.rs  mod.rs  run_tab.rs  transaction_tab.rs
src/scss/: helpers.scss  style.scss
(+2 files in other folders)
