[package]
name = "simplicity-webide"
version = "0.1.0"
edition = "2021"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"

[dependencies]
itertools = "0.13.0"
simfony = { git = "https://github.com/BlockstreamResearch/simfony", rev = "869a0b217ec275a976828cb838cb3bf21c808afd" }
leptos = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
console_error_panic_hook = "0.1.7"
hex-conservative = "0.2.1"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = ["Navigator", "Clipboard", "Storage"] }
wasm-bindgen-futures = "0.4.43"
gloo-timers = { version = "0.3.0", features = ["futures"] }
lz-str = "0.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
