[package]
name = "simplicity-webide"
version = "0.1.0"
edition = "2021"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"

[dependencies]
itertools = "0.13.0"
simfony = { git = "https://github.com/BlockstreamResearch/simfony", rev = "980a2e1fde7b0c99da6019a7595b2c3cb5bb47e3" }
leptos = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
console_error_panic_hook = "0.1.7"
hex-conservative = "0.2.1"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = ["Navigator", "Clipboard", "Storage"] }
wasm-bindgen-futures = "0.4.43"
gloo-timers = { version = "0.3.0", features = ["futures"] }

# using a rev instead of released 0.8.0 because a needed fn isn't pub
lwk_wollet = { git = "https://github.com/blockstream/lwk", rev="5a2d868cc9f33f75a1eff90acc62b55a49de82c3", default-features = false, features = [
    "esplora_wasm",
] }


[dev-dependencies]
wasm-bindgen-test = "0.3.43"
